<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_1"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/num1_hint"
        android:backgroundTint="@color/lightBlue"
        app:layout_constraintBottom_toTopOf="@+id/number_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <EditText
        android:id="@+id/number_2"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/num2_hint"
        android:inputType="numberDecimal|numberSigned"
        android:backgroundTint="@color/lightBlue"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="301dp"
        android:layout_height="273dp"
        android:layout_marginBottom="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_button"
            android:layout_marginStart="16dp"
            android:text="@string/plus"
            style="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.107" />

        <Button
            android:id="@+id/sub_button"
            android:layout_marginEnd="16dp"
            android:text="@string/minus"
            style="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/add_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.109" />

        <Button
            android:id="@+id/mul_button"
            style="@style/ButtonStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_button"
            app:layout_constraintVertical_bias="0.111" />

        <Button
            android:id="@+id/div_button"
            style="@style/ButtonStyle"
            android:text="@string/divide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toEndOf="@+id/mul_button"
            app:layout_constraintTop_toBottomOf="@+id/sub_button"
            app:layout_constraintVertical_bias="0.703" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/ans_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>